# pinproject

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_parser.sh  setup_ollama.sh
notebooks/: pinproject_colab_gpu_runner.ipynb
pin_catalog_parser/: __init__.py  main.py  models.py
pin_catalog_parser/ai/: verifier.py
pin_catalog_parser/excel/: exporter.py
pin_catalog_parser/parser/: image_extractor.py  page_parser.py  pdf_reader.py  relationship_builder.py
pinproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
